@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add where_used method
 
 0.002000  2022-11-25 11:36:20+01:00 Europe/Vienna
     - add dns_domain methods
